yaml/jfrog/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jfrog-argo
  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jfrog-argo-demo
  namespace: jfrog-argo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      imagePullSecrets:
        - name: docker-jfrog
      containers:
        - name: back-end
          image: example
          ports:
            - containerPort: 8072
---
#Service
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: jfrog-argo-demo
  name: jfrog-argo-demo
  namespace: jfrog-argo
spec:
  ports:
  - name: http
    port: 8072
    protocol: TCP
    targetPort: http
  selector:
    app: web
  sessionAffinity: None
  type: NodePort

---
# Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/name: jfrog-argo-demo
  name: jfrog-argo-demo
  namespace: jfrog-argo
spec:
  rules:
  - host: jfrog-argo.nawaz-demo.opsera.io
    http:
      paths:
      - backend:
          serviceName: jfrog-argo-demo
          servicePort: 8072
        path: /
---
